--- a/vignettes/CoSMic-Basic-Usage.Rmd
+++ b/vignettes/CoSMic-Basic-Usage.Rmd
@@ -67,12 +67,12 @@ https://github.com/hpcralf/CoSMic/blob/main/aux/CoSMic-Parameter-Setup_and_Usage
 
 ### Remark
 As already mentioned above, this demonstration executes CoSMic with default parameters so it is **not
-meant to produce quantitatively correct results**. This is due to the default population size of 0.1%
-of the German population. It was  found during CoSMic's development that correct prediction of ICU
-capacitiy coverage during the first and second wave of the  COVID-19 pandemic for a country like
-Germany with ~83 million inhabitants at least requires a 20% population sample. Smaler samples were
-found  to produce siginficantly altered infection dynamics starting in the middle of the second wave. 
-
+meant to produce quantitatively correct results**. This is due to the default population size of 1.0%
+of the German population and a selection of only four federal states. It was  found during CoSMic's 
+development that correct prediction of ICU capacitiy coverage during the first and second wave of the  
+COVID-19 pandemic for a country like Germany with ~83 million inhabitants at least requires a 
+20% population sample. Smaler samples were found  to produce siginficantly altered infection 
+dynamics starting in the middle of the second wave. 
 
 # Initialization
 
@@ -99,9 +99,25 @@ exec.params <- set.exec.params()
 
 In the pspace parameter list, model parameters are stored that are potentially subject to variations.
 In this basic usage scenario we use the `set.pspace()` function to initialize the parameter space.
-Alternatively the default list provided by the CoSMic package as a dataset can be used. Please note
-that `pspace` is used as a global variable so this name can not be changed. In case the default parameter
-space is used, it has to be renamed to `pspace`.
+Alternatively the default list provided by the CoSMic package as a dataset can be used.
+```{r , eval=FALSE}
+data("param.space")
+```
+Please note that `pspace` is used as a global variable so this name can not be changed. 
+In case the default parameter space is used, it has to be renamed to `pspace`. I.e.
+```{r, eval=FALSE}
+pspace <- param.space
+```
+
+#### Sample Size
+```{r}
+set.pspace(param  = "sam_size", values = 832224)
+```
+
+#### Reproduction Number
+```{r}
+set.pspace(param  = "R0", values = 3.5)
+```
 
 #### Duration in ICU
 ```{r}
@@ -112,7 +128,7 @@ set.pspace(param  = "icu_dur", values = 14)
 ```{r}
 data("R0effect.nuts2")
 set.pspace(param  = "R0effect",
-           values =  R0effect.nuts2)
+           values =  list(R0effect.nuts2))
 ```
 
 #### Weight of infection dynamic
